--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.12" , features = ["dynamic_linking"] }
+bevy = { version = "0.12" , features = ["dynamic_linking", "file_watcher"] }
 bevy-inspector-egui = "0.21"
 leafwing-input-manager = "0.11.1"
 bevy_pancam = {version = "0.10", features = ["bevy_egui"]}
