--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.12" , features = ["dynamic_linking", "file_watcher"] }
+bevy = { version = "0.12" }
 bevy-inspector-egui = "0.21"
 leafwing-input-manager = "0.11.1"
 bevy_pancam = {version = "0.10", features = ["bevy_egui"]}
@@ -16,6 +16,20 @@ anyhow = "1.0"
 ron = "0.8"
 bevy_tweening = "0.9"
 thiserror = "1.0"
+
+[features]
+hot = [ "bevy/file_watcher" ]
+dynamic = [ "bevy/dynamic_linking" ]
+
+[profile.wasm-release]
+inherits = "release"
+opt-level = "z"
+lto = "fat"
+codegen-units = 1
+
+[profile.native-release]
+inherits = "release"
+lto = true
 
 [profile.dev]
 opt-level = 1
